--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 /.vs
-/CIUSPTToDDL/bin
-/CIUSPTToDDL/obj
-/CIUSPTToDDL.Console/bin
-/CIUSPTToDDL.Console/obj
-/CIUSPTToDDL.Lib/obj
-/CIUSPTToDDL.Lib/bin
-/CIUSPTToDDL.Lib/CIUSPTToDDL.Lib.nuspec
-/CIUSPTToDDL.Lib/nugetPackagePush.cmd
-/SaphetyToDDL.Lib/bin
-/SaphetyToDDL.Lib/obj
-/SaphetyToDDL.Console/bin
-/SaphetyToDDL.Console/obj
-/SaphetyToDDL.Lib/nugetPackagePush.cmd
-/SaphetyToDDL.Lib/SaphetyToDDL.Lib.1.0.2.nupkg
+/MinsatToDDL/bin
+/MinsatToDDL/obj
+/MinsatToDDL.Console/bin
+/MinsatToDDL.Console/obj
+/MinsatToDDL.Lib/obj
+/MinsatToDDL.Lib/bin
+/MinsatToDDL.Lib/MinsatToDDL.Lib.nuspec
+/MinsatToDDL.Lib/nugetPackagePush.cmd
+/MinsatToDDL.Lib/bin
+/MinsatToDDL.Lib/obj
+/MinsatToDDL.Console/bin
+/MinsatToDDL.Console/obj
+/MinsatToDDL.Lib/nugetPackagePush.cmd
+/MinsatToDDL.Lib/MinsatToDDL.Lib.1.0.2.nupkg
