Refactor parsers and enhance ORDER/INVOICE handling
Refactored `Program.cs` for improved readability and maintainability.
Introduced `DocumentType` enum to differentiate between INVOICE and
ORDER processing. Enhanced `MinsaitParser` and `MinsaitReverseParser`
to support reverse mapping from DDL to XML. Added `IMinsaitReverseDocumentParser`
interface and implemented `MinsaitInvoiceReverseParser` and
`MinsaitOrderReverseParser` for modular handling of document types.

Updated `Order` and related models to better represent XML structure,
adding new fields like `OrderCurrency`, `PaymentInstructions`, and
`OrderTotals`. Introduced new classes for finer-grained XML mapping.

Added a real Minsait ORDER sample to `Resources` for testing. Removed
unused legacy code and updated project files to reflect these changes.
Improved overall code modularity, readability, and extensibility.

--- a/MinsaitToDDL.Lib/MinsaitToDDL.Lib.csproj
+++ b/MinsaitToDDL.Lib/MinsaitToDDL.Lib.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="MinsaitInvoiceMapper.cs" />
     <Compile Remove="Models\BillToEntity.cs" />
     <Compile Remove="Models\BillToParty.cs" />
     <Compile Remove="Models\DiscountSettings.cs" />
@@ -23,6 +24,9 @@
     <Compile Remove="Models\Minsait\PaymentTerms.cs" />
     <Compile Remove="Models\Taxis.cs" />
     <Compile Remove="Models\TransactionID.cs" />
+    <Compile Remove="Parsers\MinsaitInvoiceReverseParser .cs" />
+    <Compile Remove="Parsers\MinsaitOrderReverseParser.cs" />
+    <Compile Remove="Parsers\MinsaitReverseParser.cs" />
   </ItemGroup>
 
   <ItemGroup>
